# sparse-ips

./: __init__.py  animation.py  core.py  ips_class.py  jax_mlfe.py  jump_ips_sim.py  markov_lfe.py  mean-field.py  optimization.py  pyproject.toml  red_mlfe.py  visualization.py
sparseips/: animation.py  ips_class.py  jax_mlfe.py  mean_field.py  util.py
src/sparseips/: __init__.py  jump_ips_sim.py  optimization.py  visualization.py
tests/: test_sir_variants.py
